Fully fix overflow problem, add more styling

--- a/app/assets/stylesheets/landing_channel.css
+++ b/app/assets/stylesheets/landing_channel.css
@@ -1,23 +1,23 @@
 :root {
   --user-bar-color: #2A2C31;
   --font-primary: #FFF;
+  --app-primary-background-color: #36393f;
   --app-tertiary-background-color: #202225;
+  --search-text-color: #72767D;
 }
 
 /* GENERAL STYLING */
 
 .channels {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 50px;
+  display: flex;
+  height: calc(100vh - 50px);
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-
-/* TODO: FIX CONTAINER DIMENSIONS */
 .channels-top-info {
-  padding: 10px 15px 50px 15px;
+  padding: 10px 15px 0 15px;
   width: auto;
-  height: -webkit-fill-available;
 }
 
 .channels-top-info {
@@ -31,7 +31,29 @@
   cursor: pointer;
 }
 
-/* TODO: Add styled scrollbar */
+/* Search Bar */
+
+.search-container {
+  margin: auto;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
+}
+
+.search-container input {
+  margin: auto;
+  width: 100%;
+  height: 100%;
+  padding: 0 5px 0 5px;
+  border-radius: 5px;
+  background-color: var(--app-tertiary-background-color);
+  color: var(--search-text-color);
+  outline: none;
+  border: none;
+  font-size: 16px;
+}
 
 /* width */
 .channels-top-info::-webkit-scrollbar {
@@ -70,14 +92,13 @@
   text-transform: uppercase;
 }
 
-
 /* USER INFO BAR */
 
 .user-info-bar {
   width: 250px;
-  position: absolute;
-  bottom: 0;
-  height: 50px;
+  /* position: absolute;
+  bottom: 0; */
+  min-height: 50px;
   border-top: 1px solid black;
   display: flex;
   justify-content: space-between;
@@ -109,4 +130,51 @@
 .nav-icon-container i:hover {
   cursor: pointer;
   color: var(--font-primary);
+}
+
+/* ACTIVITY DISPLAY STYLING */
+
+.activity-display-container {
+  display: flex;
+  background-color: var(--app-primary-background-color);
+  height: calc(100vh - 50px);
+  width: auto;
+  padding: 20px 20px 0 20px;
+}
+
+.activities-display-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 400px);
+  grid-gap: 10px;
+  justify-content: center;
+  width: 100%;
+}
+
+.activities-display-list li {
+  border: 1px solid red;
+  border-radius: 5px;
+  height: 450px;
+}
+
+.activities-display-list {
+  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
+  cursor: pointer;
+}
+
+/* width */
+.activities-display-list::-webkit-scrollbar {
+  width: 10px;
+  background: transparent;
+}
+
+/* Track */
+.activities-display-list::-webkit-scrollbar-track {
+  background: transparent; 
+}
+ 
+/* Handle */
+.activities-display-list::-webkit-scrollbar-thumb {
+  background: var(--app-tertiary-background-color); 
 }
